--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,7 @@ destination: ./_site
 permalink: /:title
 paginate: 8
 paginate_path: /page:num/
+excerpt_separator: <!--excerpt_end-->
 
 # Default values
 defaults:
