--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   url: "http://davidlaprade.github.io"
 
 # Build settings
-baseurl: /
+baseurl: /blog
 markdown: kramdown
 source: .
 destination: ./_site
