Attempt to move this blog over to the GitHub hosted domain

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ author:
   url: "http://davidlaprade.github.io"
 
 # Build settings
-baseurl: /blog
+baseurl: ""
 markdown: kramdown
 source: .
 destination: ./_site
