--- a/_config.yml
+++ b/_config.yml
@@ -30,6 +30,9 @@ defaults:
 # Custom variables
 version: "1.1.0"
 
+gems:
+  - jekyll-redirect-from
+
 # Options
 custom_header: false
 custom_nav_footer: false
