--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: David Laprade | Blog
-description: "A minimal blog template, build with Jekyll."
+description: "Yet another blog by a software developer."
 url: "http://davidlaprade.github.io"
 author:
   name: "David Laprade"
@@ -30,7 +30,7 @@ defaults:
 # Custom variables
 version: "1.1.0"
 
-gems:
+plugins:
   - jekyll-redirect-from
 
 # Options
